tests/uncompilable_examples/type_does_not_implement_debug.stderr
error[E0277]: `Test<X, Y>` doesn't implement `Debug`
  --> $DIR/type_does_not_implement_debug.rs:13:8
   |
13 |     F2(Test<X, Y>)
   |        ^^^^^^^^^^ `Test<X, Y>` cannot be formatted using `{:?}`
   |
   = help: the trait `Debug` is not implemented for `Test<X, Y>`
   = note: add `#[derive(Debug)]` or manually implement `Debug`
   = note: required because of the requirements on the impl of `Debug` for `&Test<X, Y>`
   = note: required for the cast to the object type `dyn Debug`
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
